# xyrha-cookiecutter-pypackage

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  AUTHORS.md  README.md  jreleaser.yml  pyproject.toml  setup.cfg
{{cookiecutter.package_name}}/.github/workflows/: ci.yml  publish.yml
{{cookiecutter.package_name}}/docs/src/: conf.py
{{cookiecutter.package_name}}/src/{{cookiecutter.__import_name}}/: __init__.py
{{cookiecutter.package_name}}/tests/unit/: test_example.py
