[metadata]
name = {{ cookiecutter.package_name }}
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.package_short_description }}
long_description = file:README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.12
packages = find:
package_dir =
    =src
install_requires =
    importlib-metadata


[options.packages.find]
where = src

[options.package_data]
* = py.typed

[options.extras_require]
dev =
    tox
    %(lint)s
    %(test)s
    %(doc)s
    %(build)s

lint =
    black
    ruff
    mypy
    pylint
    pytest

test =
    pytest
    pytest-randomly
    pytest-cov

doc =
    sphinx
    sphinx-material
    myst_parser

build =
    build[virtualenv]